// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environment CircleCi pull request parses environment correctly 1`] = `
Object {
  "branch": "pizza-feature",
  "event_type": "pull_request",
  "repo": "pied-pieper/hotdog-not-hotdog",
  "sha": "ffff",
  "token": "aaaa",
}
`;

exports[`environment TravisCi pull request parses environment correctly 1`] = `
Object {
  "branch": "pizza-feature",
  "event_type": "pull_request",
  "repo": "pied-pieper/hotdog-not-hotdog",
  "sha": "ffff",
  "token": "aaaa",
}
`;

exports[`environment TravisCi push parses environment correctly 1`] = `
Object {
  "branch": "pizza-feature",
  "event_type": "push",
  "repo": "pied-pieper/hotdog-not-hotdog",
  "sha": "ffff",
  "token": "aaaa",
}
`;
